get list product_detail by product_id
